# ai-portfolio-manager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: TODO.md
brand/: README.md
config/: sectors.yaml  watchlist.yaml
data/: benchmark_history.csv  decisions.jsonl  investor_letters.jsonl  llm_calls.jsonl  memory_sec_filings.json  portfolio_history.csv  portfolio_state.json  predictions.jsonl  run_history.jsonl  run_progress.db  social_posts.jsonl  trades.csv
docs/: CONTENT-STRATEGY.md  PRODUCT-ROADMAP.md  ROADMAP-V2.md  ROADMAP.md  article-notes.md  design-phase3.md  incidents.md  model-selection.md
evals/: __init__.py  ablation_scenarios.py  grounding.py  runner.py  scenarios.py  scorers.py
mcp_server/: README.md  __init__.py  fund_data.py  server.py
prompts/: portfolio_manager.txt  state_tweet.txt  tweet_writer.txt
public/: CNAME  ablation_comparison.json  about.html  analytics.js  architecture.html  baseline_comparison.json  benchmark_history.csv  dashboard.html  decisions.html  decisions.jsonl  engineering.html  index.html  investor_letter.json  investor_letter.md  latest_report.md  latest_trades.json  latest_tweet.json  memory_health.json  portfolio.json  portfolio_history.csv  predictions.html  predictions.json  predictions.jsonl  robots.txt  run_history.json  run_status.json  site_meta.json  sitemap.xml  social_posts.json  social_posts.jsonl  state_tweet.json  trades.csv
reports/: report_2026-06-08.md  report_2026-06-11.md  report_2026-06-12.md  report_2026-06-13.md  (+20 more)
src/: config.py  (+1 more)
(+230 files in other folders)
