[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-portfolio-manager"
version = "0.1.0"
description = "AI-powered portfolio management with LLM agents"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "feedparser>=6.0.0",
    "qdrant-client>=1.9.0",
    "langchain-qdrant>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
